feat: past trips

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -118,12 +118,13 @@ AlreadyUser=Already a user?
 #details.jsp
 Details=Details
 ReserveTrip=Reserve Trip
-ReserveRequest=Reserve Request
-ReserveRequestSuccess= Reserve requested succesfully!
+ReserveRequest=Send Offer
+ReserveRequestSuccess= Offer sent succesfully!
 RequestDetails=Request Details
 NamePlaceholder=John Doe
 EmailPlaceHolder=example@gmail.com
-Reserve=Reserve
+Reserve=Send Offer
+SendOffer=Send Offer
 CargoType=Cargo type
 
 LastUpdate=Last Update
@@ -133,7 +134,7 @@ IReceivedCargo=I received the cargo
 DidntReceiveCargo=You didn't receive the cargo
 DriverCompletedTrip=Driver completed trip
 DriverDidntCompleteTrip=Driver didn't complete trip yet
-NoProposalsYet=No proposals yet for this publication.
+NoProposalsYet=No offers yet for this publication.
 
 TripFinished=Trip finished
 
@@ -213,7 +214,7 @@ PageNotFound=Page not found
 TripCreated=Trip created successfully!
 Trips.AcceptProposal=Accept
 RequestCreated=Request created succesfully!
-ReserveSuccess=Reserve requested succesfully!
+ReserveSuccess=Offer sent succesfully!
 Description=Description
 
 #createRequests
