--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -14,10 +14,6 @@ Size.userForm.password=La contraseña debe tener entre 6 y 100 caracteres.
 Pattern.verifyAccountForm.token=Token incorrecto.
 IncorrectToken=Token incorrecto.
 
-#EditUserForm
-Pattern.editUserForm.name=Nombre inválido. Ejemplo: Juan Pérez
-Size.editUserForm.name=El nombre debe tener entre 6 y 100 caracteres.
-
 
 #requestForm
 Pattern.requestForm.requestedWeight=El peso debe ser un numero mayor a 50kg.
@@ -51,14 +47,18 @@ DateValidation.tripForm=La fecha de llegada debe ser posterior a la de salida.
 NotNull.tripForm=Debe completar este campo.
 NotNull.tripForm.cargoType=Seleccione una tipo de cargamento.
 
+#EditUserForm
+Pattern.editUserForm.name=Nombre inválido. Ejemplo: Juan Pérez
+Size.editUserForm.name=El nombre debe tener entre 6 y 100 caracteres.
+
 
 #details.jsp
 Details=Detalles
-ReserveTrip=Reservar Viaje
-ReserveRequest=Reservar Pedido
+ReserveRequest=Enviar Oferta
 NamePlaceholder=Pedro Gonzales
 EmailPlaceHolder=ejemplo@gmail.com
 Reserve=Reservar
+SendOffer=Enviar Oferta
 TripDetails=Detalles del viaje
 RequestDetails=Detalles de la solicitud
 Create=Crear
@@ -80,7 +80,7 @@ IFinishedTrip=Completé el viaje.
 DidntFinishTrip=No completaste el viaje.
 ProviderReceivedCargo=El proveedor recibió el cargamento.
 ProviderDidntReceiveCargo=El proveedor no recibió el cargamento.
-NoProposalsYet=Todavía no hay propuestas para esta publicacion.
+NoProposalsYet=Todavía no hay ofertas para esta publicacion.
 
 AcceptedBy=Aceptado por
 
@@ -206,7 +206,7 @@ FiltersSortArrivalDateDesc=Fecha de llegada (Desc)
 #errors
 404Error=Error 404
 404TripRequestMsg=Viaje o pedido no encontrado
-404ProposalMsg=Propuesta no encontrada
+404ProposalMsg=Oferta no encontrada
 TryAgain=Su usted cree que esto es un error contacte soporte.
 GoBack=Volver atrás
 500Error=Error 500
@@ -216,9 +216,9 @@ PageNotFound=Pagina no encontrada
 
 #Success
 TripCreated=Viaje creado con éxito
-Trips.AcceptProposal=Aceptar Propuesta
+Trips.AcceptProposal=Aceptar Oferta
 RequestCreated=Pedido creado con éxito
-ReserveSuccess=Reserva pedida con éxito
+ReserveSuccess=Oferta enviada con éxito
 Description=Descripcion
 
 
@@ -271,17 +271,17 @@ StartBrowsing=Comience Ahora! >>
 
 #proposal
 
-PropTitle=¡Nueva Propuesta Disponible!
+PropTitle=¡Nueva oferta Disponible!
 PropPhrase1=Estimado/a 
-PropPhrase2=, ha recibido una nueva propuesta.
+PropPhrase2=, ha recibido una nueva oferta.
 PropDescription=Descripción(Escrita por el usuario)
-SeeProp=Ver propuestas
+SeeProp=Ver ofertas
 
 #requestconfirmation
 
 ReqTitle=Se ha confirmado un pedido!
 ReqPhrase=Un pedido ha sido aceptado! 
-ReqDetails= DETALLES DEL PEDIDO
+ReqDetails= DETALLES DEL Oferta
 ReqOrigin=Origen : 
 ReqDestination=Destino : 
 ReqDeparture=Fecha Salida / Hora : 
@@ -296,7 +296,7 @@ ViewDetails=Ver detalles >>
 
 #MyTrips/MyRequests
 ActiveTrips=Viajes Activos
-AcceptedTrips=Viajes/Propuestas Aceptadas
+AcceptedTrips=Viajes/ofertas Aceptadas
 AcceptedRequests=Pedidos Aceptados
 ActiveRequests=Pedidos Activos
 
