feat: view all trips + dates fix

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -342,6 +342,7 @@ StatusUpdate=Trip Status Update
 StatusUpdatePhrase=The status of your trip has been updated.
 ViewStatus=View Status
 
-
+#search
 CreateTripPublication=Don't worry, create a publication and truckers will send you offers!
 NoResults=No results found.
+SearchAllTrips=View all trips
