--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -337,7 +337,9 @@ StatusUpdate=Actualizacion del estado de tu viaje
 StatusUpdatePhrase=Ha habido un cambio en el estado de tu viaje.
 ViewStatus=Ver estado del viaje
 
+#seatch
 CreateTripPublication=No te preocupes, crea una publicacion de viaje y los camioneros te contactaran.
 NoResults=No se encontraron resultados
+SearchAllTrips=Ver todos los viajes.
 
 
