feat: reviews integrated into user model

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -320,6 +320,7 @@ ReviewSent=Calificacion enviada
 WriteReview=Escriba una reseña
 WriteDescription=Escriba una descripcion
 Review=Reseña
+Reviews=Reseñas
 NoReviewsYet=Todavia no hay reseñas
 
 
