--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -323,6 +323,7 @@ ReviewSent=Review Sent
 WriteReview=Write a review
 WriteDescription=Write a description
 Review=Review
+Reviews=Reviews
 NoReviewsYet=No reviews yet
 
 
