refactor: frontend refactor with offers and reviews integrated in TRIP

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -67,6 +67,7 @@ RequestDetails=Detalles de la solicitud
 Create=Crear
 CargoType=Tipo de carga
 OfferedPrice=Precio ofertado
+OfferYouSent=Oferta que enviaste
 
 
 LastUpdate=Ultima actualizacion
