--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -131,6 +131,7 @@ Reserve=Send Offer
 SendOffer=Send Offer
 CargoType=Cargo type
 OfferedPrice=Offered price
+OfferYouSent=Offer you sent
 
 LastUpdate=Last Update
 Status=Status
