feat: search similar requests reusing search function

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -86,6 +86,7 @@ DidntFinishTrip=No completaste el viaje.
 ProviderReceivedCargo=El proveedor recibió el cargamento.
 ProviderDidntReceiveCargo=El proveedor no recibió el cargamento.
 NoProposalsYet=Todavía no hay ofertas para esta publicacion.
+SearchSimilar=Buscar similares
 
 AcceptedBy=Aceptado por
 
