--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -141,6 +141,7 @@ DidntReceiveCargo=You didn't receive the cargo
 DriverCompletedTrip=Driver completed trip
 DriverDidntCompleteTrip=Driver didn't complete trip yet
 NoProposalsYet=No offers yet for this publication.
+SearchSimilar=Search Similar
 
 TripFinished=Trip finished
 
