style: general styling

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -349,3 +349,4 @@ ViewStatus=View Status
 CreateTripPublication=Don't worry, create a publication and truckers will send you offers!
 NoResults=No results found.
 SearchAllTrips=View all trips
+SearchTrips=Search Trips
