--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -344,5 +344,6 @@ ViewStatus=Ver estado del viaje
 CreateTripPublication=No te preocupes, crea una publicacion de viaje y los camioneros te contactaran.
 NoResults=No se encontraron resultados
 SearchAllTrips=Ver todos los viajes.
+SearchTrips=Buscar viajes
 
 
