--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -343,3 +343,4 @@ ViewStatus=Ver estado del viaje
 CreateTripPublication=No te preocupes, crea una publicacion de viaje y los camioneros te contactaran.
 NoResults=No se encontraron resultados
 SearchAllTrips=Ver todos los viajes.
+SearchTrips=Buscar viajes
