fix: translate search error messages

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -54,6 +54,19 @@ Size.tripForm.cargoType=Select an option.
 Size.tripForm.origin=Enter origin.
 Size.tripForm.destination=Enter destination.
 
+#SearchTripForm
+Pattern.searchTripForm.minDepartureDate=Fill out this field.
+Pattern.searchTripForm.maxArrivalDate=Fill out this field.
+Pattern.searchTripForm.licensePlate=Invalid license plate.
+Pattern.searchTripForm.availableWeight=Weight should be greater than 50kg.
+Pattern.searchTripForm.availableVolume=Volume should be greater than 1m3.
+PreventPast.searchTripForm.minDepartureDate=The date should be in the future.
+PreventPast.searchTripForm.maxArrivalDate=The date should be in the future.
+DateValidation.searchTripForm=Departure date cannot be after arrival date.
+NotNull.searchTripForm.cargoType=Select an option.
+Size.searchTripForm.origin=Select origin.
+Size.searchTripForm.destination=Select destination.
+
 
 #navbar
 Explore=Explore
