fix: translate search error messages

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -55,13 +55,13 @@ Pattern.editUserForm.name=Nombre inválido. Ejemplo: Juan Pérez
 Size.editUserForm.name=El nombre debe tener entre 6 y 100 caracteres.
 
 #SearchTripForm
-Pattern.searchTripForm.minDepartureDate=Debe completar este campo.
-Pattern.searchTripForm.maxArrivalDate=Debe completar este campo.
 Pattern.searchTripForm.licensePlate=Patente inválida.
 Pattern.searchTripForm.availableWeight=El peso mínimo es 50 kg.
 Pattern.searchTripForm.availableVolume=Volumen mínimo es 1 m3.
-PreventPast.searchTripForm.minDepartureDate=La fecha debe ser en el futuro.
-PreventPast.searchTripForm.maxArrivalDate=La fecha debe ser en el futuro.
+Pattern.searchTripForm.departureDate=Debe completar este campo.
+Pattern.searchTripForm.arrivalDate=Debe completar este campo.
+PreventPast.searchTripForm.departureDate=La fecha debe ser en el futuro.
+PreventPast.searchTripForm.arrivalDate=La fecha debe ser en el futuro.
 DateValidation.searchTripForm=La fecha de llegada debe ser posterior a la de salida.
 NotNull.searchTripForm.cargoType=Seleccione un tipo de cargamento.
 Size.searchTripForm.origin=Ingrese origen.
