fix: filter checking

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -54,6 +54,7 @@ NotNull.tripForm.cargoType=Seleccione una tipo de cargamento.
 Pattern.editUserForm.name=Nombre inválido. Ejemplo: Juan Pérez
 Size.editUserForm.name=El nombre debe tener entre 6 y 100 caracteres.
 
+Max.filterForm.minAvailableVolume=Volumen excedido.
 #SearchTripForm
 Pattern.searchTripForm.licensePlate=Patente inválida.
 Pattern.searchTripForm.availableWeight=El peso mínimo es 50 kg.
@@ -66,7 +67,6 @@ DateValidation.searchTripForm=La fecha de llegada debe ser posterior a la de sal
 NotNull.searchTripForm.cargoType=Seleccione un tipo de cargamento.
 Size.searchTripForm.origin=Ingrese origen.
 Size.searchTripForm.destination=Ingrese destino.
-
 
 
 #details.jsp
