--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -14,6 +14,9 @@ NotNull.userForm.role=Select a role.
 Pattern.verifyAccountForm.token=Incorrect token.
 IncorrectToken=Incorrect token.
 
+Max.filterForm.minAvailableVolume=Volume exceded.
+
+
 #SendOffer
 NotNull.acceptForm.price=Minimum price 1.
 Min.acceptForm.price=Minimum price 1.
