--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -14,6 +14,8 @@ Size.userForm.password=La contraseña debe tener entre 6 y 100 caracteres.
 Pattern.verifyAccountForm.token=Token incorrecto.
 IncorrectToken=Token incorrecto.
 
+Max.filterForm.minAvailableVolume=Volumen excedido.
+
 #SendOffer
 NotNull.acceptForm.price=Minimum price 1.
 Min.acceptForm.price=Minimum price 1.
