feat: clear button

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -188,6 +188,7 @@ AlreadyUser=¿Ya tienes una cuenta?
 
 
 #browse.jsp
+Clear=Limpiar
 OriginDestination=Origen - Destino
 Dates=Fecha partida -  Fecha llegada
 NoTripsAvailable=No hay viajes disponibles.
