--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -171,6 +171,7 @@ AcceptedBy=Accepted by
 
 
 #browse.jsp
+Clear=Clear
 OriginDestination=Origin - Destination
 Dates=Departure date -  Arrival date
 NoTripsAvailable=No trips available.
