ft: suggested price when offering

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -126,6 +126,7 @@ LicensePlate=License Plate
 DepartureDate=Departure Date
 ArrivalDate=Arrival Date
 Price=Price
+SuggestedPrice = Suggested Price
 AvailableVolume=Avl. Volume
 NecessaryVolume=Necessary Volume
 AvailableWeight=Avl. Weight
