--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -182,6 +182,7 @@ Destination=Destino
 DepartureDate=Fecha de salida
 ArrivalDate=Fecha de llegada
 Price=Precio
+SuggestedPrice = Precio Sugerido
 AvailableVolume=Volumen Disponible
 NecessaryVolume=Volumen Necesario
 AvailableWeight=Peso Disponible
