chore: nullable search fields for provider

--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -58,6 +58,7 @@ Pattern.editUserForm.name=Nombre inválido. Ejemplo: Juan Pérez
 Size.editUserForm.name=El nombre debe tener entre 6 y 100 caracteres.
 
 #SearchTripForm
+
 Pattern.searchTripForm.minDepartureDate=Debe completar este campo.
 Pattern.searchTripForm.maxArrivalDate=Debe completar este campo.
 Pattern.searchTripForm.licensePlate=Patente inválida.
@@ -366,5 +367,6 @@ CreateTripPublication=No te preocupes, crea una publicacion de viaje y los camio
 NoResults=No se encontraron resultados
 SearchAllTrips=Ver todos los viajes.
 SearchTrips=Buscar viajes
+FindATrip=Encuentra un viaje
 
 
