--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -364,3 +364,4 @@ CreateTripPublication=No te preocupes, crea una publicacion de viaje y los camio
 NoResults=No se encontraron resultados
 SearchAllTrips=Ver todos los viajes.
 SearchTrips=Buscar viajes
+FindATrip=Encuentra un viaje
