--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -372,3 +372,4 @@ CreateTripPublication=Don't worry, create a publication and truckers will send y
 NoResults=No results found.
 SearchAllTrips=View all trips
 SearchTrips=Search Trips
+FindATrip=Find a trip
