feat: alerts frontend

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -367,3 +367,11 @@ CreateTripPublication=Don't worry, create a publication and truckers will send y
 NoResults=No results found.
 SearchAllTrips=View all trips
 SearchTrips=Search Trips
+
+#MyAlers
+MyAlert=My Alert
+NoAlert=You don't have any active alert.
+CreateAlert=Create Alert
+Delete=Delete
+FromDate=From
+ToDate=To
