--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -362,4 +362,11 @@ NoResults=No se encontraron resultados
 SearchAllTrips=Ver todos los viajes.
 SearchTrips=Buscar viajes
 
+#MyAlers
+MyAlert=Mi Alerta
+NoAlert=No tienes una alerta activa
+CreateAlert=Crear Alerta
+Delete=Eliminar
+FromDate=Desde
+ToDate=Hasta
 
