--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -359,3 +359,11 @@ CreateTripPublication=No te preocupes, crea una publicacion de viaje y los camio
 NoResults=No se encontraron resultados
 SearchAllTrips=Ver todos los viajes.
 SearchTrips=Buscar viajes
+
+#MyAlers
+MyAlert=Mi Alerta
+NoAlert=No tienes una alerta activa
+CreateAlert=Crear Alerta
+Delete=Eliminar
+FromDate=Desde
+ToDate=Hasta
