feat: new landing (horrible styling)

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -167,6 +167,8 @@ EconomicSolutions=Soluciones económicas.
 EconomicSolutionsMessage=Trabajamos con una gran variedad de ofertas de viajes para que puedas comparar precios y seleccionar la que mejor se adapta a tu negocio.
 ExploitReturns=Capitalizá las vueltas!
 ExploitReturnsMessage=Aprovechá el retorno de tus viajes ofreciendo el espacio vacío de tu camión.
+BookATrucker=Reserva un camionero
+DriveWithTruckr=Conduzca con Truckr
 
 
 #common
