--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -115,6 +115,9 @@ EconomicSolutions=Inexpensive solutions.
 EconomicSolutionsMessage=We work with a wide variety of trip offers for you to compare prices and select your company's best fit.
 ExploitReturns=Capitalize on returns!
 ExploitReturnsMessage=Offer your truck's empty space and cash in on your trip's returns.
+BookATrucker=Book a trucker
+DriveWithTruckr=Drive with Truckr
+
 
 #common
 Name=Name
