feat: create publication if you didnt like results

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -377,3 +377,7 @@ NoResults=No results found.
 SearchAllTrips=View all trips
 SearchTrips=Search Trips
 FindATrip=Find a trip
+ResultsFound=Found these results for you.
+DontLikeThem=Don't like them?
+
+
