--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -371,5 +371,9 @@ NoResults=No se encontraron resultados
 SearchAllTrips=Ver todos los viajes.
 SearchTrips=Buscar viajes
 FindATrip=Encuentra un viaje
+ResultsFound=Encontré estos resultados
+DontLikeThem=No te gustaron?
+
+
 
 
