ft: new buttons when no results found

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -370,3 +370,4 @@ SearchTrips=Buscar viajes
 FindATrip=Encuentra un viaje
 ResultsFound=Encontré estos resultados
 DontLikeThem=No te gustaron?
+TryAgain=Intenta de nuevo
