--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -379,5 +379,7 @@ SearchTrips=Search Trips
 FindATrip=Find a trip
 ResultsFound=Found these results for you.
 DontLikeThem=Don't like them?
+TryAgain=Try again
+
 
 
