--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -373,6 +373,8 @@ SearchTrips=Buscar viajes
 FindATrip=Encuentra un viaje
 ResultsFound=Encontré estos resultados
 DontLikeThem=No te gustaron?
+TryAgain=Intenta de nuevo
+
 
 
 
