feat: tags en results

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -369,5 +369,5 @@ SearchAllTrips=Ver todos los viajes.
 SearchTrips=Buscar viajes
 FindATrip=Encuentra un viaje
 ResultsFound=Encontré estos resultados
-DontLikeThem=No te gustaron?
-TryAgain=Intenta de nuevo
+DontLikeThem=No te gustaron los resultados?
+
