--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -378,8 +378,8 @@ SearchAllTrips=View all trips
 SearchTrips=Search Trips
 FindATrip=Find a trip
 ResultsFound=Found these results for you.
-DontLikeThem=Don't like them?
-TryAgain=Try again
+DontLikeThem=Don't like these results?
+
 
 
 
