feat: type in alerts + types dao

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -389,3 +389,7 @@ CreateAlert=Create Alert
 Delete=Delete
 FromDate=From
 ToDate=To
+Undefined=Undefined
+NeedHelp=Need help?
+WhatIsAlert=What is an alert?
+AlertDescription=An alert is a notification that will be sent to you when a cargo that matches your criteria is created.
