--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -385,4 +385,8 @@ CreateAlert=Crear Alerta
 Delete=Eliminar
 FromDate=Desde
 ToDate=Hasta
+Undefined=Indefinido
+NeedHelp=Ayuda?
+WhatIsAlert=¿Qué es una alerta?
+AlertDescription=Una alerta es una notificación que te llegará cuando se publique cargamento que coincida con tu necesidad.
 
