feat: mailing with translation

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -316,9 +316,12 @@ ReqArrival=Fecha Llegada / Hora :
 ReqPrice= Precio : 
 HappyTrucking= Enhorabuena!
 ViewDetails=Ver detalles >>
-
+ResetTitle=Reestablecer Contraseña
 #register
-
+ResetPhrase1=Hemos recibido una solicitud para reestablecer su contraseña.
+ResetPhrase2=Si usted no ha realizado esta solicitud, por favor ignore este email. De lo contrario, haga click en el siguiente link para reestablecer su contraseña. El link va a permanecer activo por 24 horas.
+ResetButton=Reestablecer
+VerifyTitle= Verificar Cuenta
 
 
 #MyTrips/MyRequests
@@ -365,3 +368,13 @@ CreateTripPublication=No te preocupes, crea una publicacion de viaje y los camio
 NoResults=No se encontraron resultados
 SearchAllTrips=Ver todos los viajes.
 SearchTrips=Buscar viajes
+
+
+#ConfirmEmail
+
+#confirmemail
+
+PleaseConfirm= Por favor confirme su cuenta
+TokenIs= Su token es:
+
+TripProposal=Oferta de Viaje!
