--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -373,3 +373,18 @@ CreateTripPublication=Don't worry, create a publication and truckers will send y
 NoResults=No results found.
 SearchAllTrips=View all trips
 SearchTrips=Search Trips
+
+
+#confirmemail
+
+PleaseConfirm= Please confirm your new Truckr account.
+TokenIs=Your Secure Token is:
+VerifyTitle= Verify Account
+
+
+#subjects
+
+TripConfirmation=Trip Confirmation
+
+TripProposal=Trip Proposal!
+
