--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -117,14 +117,16 @@ VerifyAccount=Verificar Cuenta
 CheckEmailVerification=Por favor, verifique su casilla de correo para activar su cuenta.
 RegisterSuccess=Registro exitoso!
 ResetPassword=Reestablecer Contrasena
+ResetPhrase1=Hemos recibido una solicitud para reestablecer su contraseña.
+ResetPhrase2=Si usted no ha realizado esta solicitud, por favor ignore este email. De lo contrario, haga click en el siguiente link para reestablecer su contraseña. El link va a permanecer activo por 24 horas.
 ResetPasswordError=Link invalido o expírado.
 ResetPasswordEmailSentDetails=Se ha enviado un email a su casilla de correo con un link para reestablecer su contraseña.
 ResetPasswordEmailSent=Email enviado
 SendResetPasswordEmail=Enviar email
 ResetPasswordSuccess=Reestablecimiento exitoso!
 ResetPasswordSuccessDetails=Su contraseña ha sido reestablecida exitosamente. Por favor, inicie sesion con su nueva contraseña.
-
-
+ResetTitle=Reestablecer Contraseña
+ResetButton=Reestablecer
 #navbar
 Explore=Explorar
 CreateTrip=Crear Viaje
@@ -132,6 +134,7 @@ Trucker=Camionero
 TRUCKER=Camionero
 Provider=Proveedor
 PROVIDER=Proveedor
+VerifyTitle= Verificar Cuenta
 
 #NEW navbar
 BrowseCargo=Buscar Carga
@@ -367,5 +370,12 @@ CreateTripPublication=No te preocupes, crea una publicacion de viaje y los camio
 NoResults=No se encontraron resultados
 SearchAllTrips=Ver todos los viajes.
 SearchTrips=Buscar viajes
+
+#confirmemail
+
+PleaseConfirm= Por favor confirme su cuenta
+TokenIs= Su token es:
+
+TripProposal=Oferta de Viaje!
 
 
