--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -370,6 +370,7 @@ SearchTrips=Buscar viajes
 FindATrip=Encuentra un viaje
 ResultsFound=Encontré estos resultados
 DontLikeThem=No te gustaron?
+NewSearch=Busca de vuelta
 
 #MyAlers
 MyAlert=Mi Alerta
