ft: Landing messages

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -169,6 +169,19 @@ ExploitReturns=Capitalizá las vueltas!
 ExploitReturnsMessage=Aprovechá el retorno de tus viajes ofreciendo el espacio vacío de tu camión.
 BookATrucker=Reserva un camionero
 DriveWithTruckr=Conduzca con Truckr
+NewLanding1 = Explora el cargamento que esta disponible. Filtra como quieras!
+NewLanding2 = Elegi el cargamento que mas te convenga
+NewLanding3 = Elegi el cargo que queres llevar y envia una oferta
+OneMoreStep = Un paso mas
+NewLanding4 = Espera a que el proveedor te confirme la oferta. Siempre podes modificarla o mandarle una contraoferta
+ShipitE = Envialo!
+NewLanding5 = Una vez que se confirme la orden, comunicate con el proveedor y envia el cargamento
+CreateCustomSearch = Crea una busqueda personalizada
+SelectBestTrip = Selecciona el mejor viaje para vos
+SelectBestTripsOffer =Selecciona el mejor viaje para vos y envia una oferta
+WaitForConfirmation = Espera que el camionero te confirme la oferta. Siempre podes modificarla o mandarle una contraoferta
+WaitForItE = Espera el cargamento!
+GetInTouch = Una vez que se confirme la orden, podes comunicarte con el camionero y coordinar el envio
 
 
 #common
