--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -117,6 +117,19 @@ ExploitReturns=Capitalize on returns!
 ExploitReturnsMessage=Offer your truck's empty space and cash in on your trip's returns.
 BookATrucker=Book a trucker
 DriveWithTruckr=Drive with Truckr
+NewLanding1 = Browse the cargo that is available. Filter however is more convinient for you
+NewLanding2 = Select the best cargo option for you
+NewLanding3 = Select the cargo that you want to ship and send an offer
+OneMoreStep = One more step
+NewLanding4 = Wait for the cargo provider to confirm your offer. You can always modify it or send a counteroffer if you want
+ShipitE = Ship it!
+NewLanding5 = Once the order is confirmed, get in touch with the provider and ship the cargo
+CreateCustomSearch = Create a custom search according to your needs
+SelectBestTrip = Select the best trip for you
+SelectBestTripsOffer =Select the trip that best fits your needs and send an offer
+WaitForConfirmation = Wait for the trucker to confirm your offer. You can always modify it or send a counteroffer if you want
+WaitForItE = Wait for it!
+GetInTouch = Once the trucker confirms your offer you can get in touch with him and wait for your cargo
 
 
 #common
