feat:alert email

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -310,7 +310,7 @@ SeeProp=Ver ofertas
 
 ReqTitle=Se ha confirmado un pedido!
 ReqPhrase=Un pedido ha sido aceptado! 
-ReqDetails= DETALLES DEL Oferta
+ReqDetails= DETALLES DEL PEDIDO
 ReqOrigin=Origen : 
 ReqDestination=Destino : 
 ReqDeparture=Fecha Salida / Hora : 
@@ -382,11 +382,14 @@ Delete=Eliminar
 FromDate=Desde
 ToDate=Hasta
 Undefined=Indefinido
-NeedHelp=Ayuda?
+NeedHelp=¿Ayuda?
 WhatIsAlert=¿Qué es una alerta?
 AlertDescription=Una alerta es una notificación que te llegará cuando se publique cargamento que coincida con tu necesidad.
-
-
+AlertTitle=¡Un cargamento coincide con tus necesidades!
+AlertPhrase=Un cargamento que coincide con tus necesidades ha sido publicado.
+AlertButton=Enviar Oferta
+HurryUpAlert=¡Date prisa y sé el/la primero/a en enviar una oferta! ¡Tu cliente nuevo te espera!
+AlertSubject=Alerta de Cargamento
 #ConfirmEmail
 
 #confirmemail
@@ -394,4 +397,7 @@ AlertDescription=Una alerta es una notificación que te llegará cuando se publi
 PleaseConfirm= Por favor confirme su cuenta
 TokenIs= Su token es:
 
-TripProposal=Oferta de Viaje!
+TripProposal=¡Oferta de Viaje!
+
+ContactEmail=Email de contacto
+
