--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -393,6 +393,10 @@ Undefined=Undefined
 NeedHelp=Need help?
 WhatIsAlert=What is an alert?
 AlertDescription=An alert is a notification that will be sent to you when a cargo that matches your criteria is created.
+AlertTitle=We have found a cargo that matches your needs!
+AlertPhrase=A cargo that matches your needs has been requested.
+AlertButton=Send Offer
+HurryUpAlert=Hurry up and be the first to offer! Your new client is waiting for you!
 
 
 
@@ -404,8 +408,10 @@ VerifyTitle= Verify Account
 
 
 #subjects
-
+AlertSubject=Cargo Alert
 TripConfirmation=Trip Confirmation
 
 TripProposal=Trip Proposal!
+
+ContactEmail=Contact Email
 
