--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -388,7 +388,7 @@ TokenIs= Su token es:
 TripProposal=Oferta de Viaje!
 
 
-#MyAlers
+#MyAlerts
 MyAlert=Mi Alerta
 NoAlert=No tienes una alerta activa
 CreateAlert=Crear Alerta
@@ -399,4 +399,9 @@ Undefined=Indefinido
 NeedHelp=Ayuda?
 WhatIsAlert=¿Qué es una alerta?
 AlertDescription=Una alerta es una notificación que te llegará cuando se publique cargamento que coincida con tu necesidad.
-
+AlertTitle=¡Hemos encontrado un cargamento que coincide con tus necesidades!
+AlertPhrase=Un cargamento que coincide con tus necesidades ha sido publicado.
+AlertButton=Enviar Oferta
+HurryUpAlert=¡Date prisa y sé el/la primero/a en enviar una oferta! ¡Tu cliente nuevo te espera!
+AlertSubject=Alerta de Cargamento
+ContactEmail=Email de contacto
