feat: auto email verification

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -255,6 +255,7 @@ GoBack=Volver atrás
 500ErrorCode=Error interno del servidor
 403ErrorCode=Acceso denegado.
 PageNotFound=Pagina no encontrada
+404UserMsg=Usuario no encontrado
 
 #Success
 TripCreated=Viaje creado con éxito
@@ -368,6 +369,7 @@ NoReviewsYet=Todavia no hay reseñas
 
 
 verifyAccount=Verificar Cuenta
+AccountVerifiedSuccessfully=Cuenta verificada con éxito
 uploadTrip=Subir Foto de Viaje
 
 TripCompleted=¡Tu viaje ha sido completado con éxito!
