--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -255,6 +255,7 @@ GoBack=Go Back
 500ErrorCode=Internal Server Error
 403ErrorCode=Forbidden.
 PageNotFound=Page not found
+404UserMsg=User not found
 
 #Success
 TripCreated=Trip created successfully!
@@ -373,6 +374,7 @@ NoReviewsYet=No reviews yet
 
 
 verifyAccount=Verify Account
+AccountVerifiedSuccessfully=Account verified successfully
 uploadTrip=Upload Trip Picture
 
 
