--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -261,6 +261,7 @@ GoBack=Volver atrás
 500ErrorCode=Error interno del servidor
 403ErrorCode=Acceso denegado.
 PageNotFound=Pagina no encontrada
+404UserMsg=Usuario no encontrado
 
 #Success
 TripCreated=Viaje creado con éxito
@@ -371,6 +372,7 @@ NoReviewsYet=Todavia no hay reseñas
 
 
 verifyAccount=Verificar Cuenta
+AccountVerifiedSuccessfully=Cuenta verificada con éxito
 uploadTrip=Subir Foto de Viaje
 
 TripCompleted=¡Tu viaje ha sido completado con éxito!
