feat:pagination traduced

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -417,3 +417,10 @@ TripProposal=¡Oferta de Viaje!
 
 ContactEmail=Email de contacto
 
+#pagination
+
+First=Primera
+Last=Ultima
+Previous=Anterior
+Next=Siguiente
+
