--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -430,3 +430,10 @@ TripProposal=Trip Proposal!
 
 ContactEmail=Contact Email
 
+#pagination
+
+First=First
+Last=Last
+Previous=Previous
+Next=Next
+
