--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -421,3 +421,11 @@ AlertButton=Enviar Oferta
 HurryUpAlert=¡Date prisa y sé el/la primero/a en enviar una oferta! ¡Tu cliente nuevo te espera!
 AlertSubject=Alerta de Cargamento
 ContactEmail=Email de contacto
+
+
+#pagination
+
+First=Primera
+Last=Ultima
+Previous=Anterior
+Next=Siguiente
