fix: message fixes

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -140,6 +140,8 @@ Origin=Origin
 Destination=Destination
 LicensePlate=License Plate
 DepartureDate=Departure Date
+MinDepartureDate = Minimum Departure Date
+MaxArrivalDate = Maximum Arrival Date
 ArrivalDate=Arrival Date
 Price=Price
 SuggestedPrice = Suggested Price
@@ -231,6 +233,8 @@ ResetPasswordSuccessDetails=Your password has been reset successfully. You can n
 FiltersMinPrice=Min Price
 FiltersMaxPrice=Max Price
 FiltersDeparture=Departure
+FiltersMinDeparture = Min Departure
+FiltersMaxArrival = Max Arrival
 FiltersArrival=Arrival
 FiltersSortBy=Sort By
 FiltersMinVolume=Min Volume
