--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -199,6 +199,8 @@ Role=Rol
 LicensePlate=Patente
 Destination=Destino
 DepartureDate=Fecha de salida
+MinDepartureDate = Fecha de salida minima
+MaxArrivalDate = Fecha de llegada maxima
 ArrivalDate=Fecha de llegada
 Price=Precio
 SuggestedPrice = Precio Sugerido
@@ -237,6 +239,8 @@ MyTrips=Mis Viajes
 FiltersMinPrice=Precio Min
 FiltersMaxPrice=Precio Max
 FiltersDeparture=Salida
+FiltersMinDeparture = Salida Min
+FiltersMaxArrival = Llegada Max
 FiltersArrival=Llegada
 FiltersSortBy=Ordenar por
 FiltersMinVolume=Volumen Min
