fix: message fix

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -15,8 +15,8 @@ Pattern.verifyAccountForm.token=Token incorrecto.
 IncorrectToken=Token incorrecto.
 
 #SendOffer
-NotNull.acceptForm.price=Minimum price 1.
-Min.acceptForm.price=Minimum price 1.
+NotNull.acceptForm.price=Precio minimo 1.
+Min.acceptForm.price=Precio minimo 1.
 
 #requestForm
 Pattern.requestForm.requestedWeight=El peso debe ser un numero mayor a 50kg.
