--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -17,8 +17,8 @@ IncorrectToken=Token incorrecto.
 Max.filterForm.minAvailableVolume=Volumen excedido.
 
 #SendOffer
-NotNull.acceptForm.price=Minimum price 1.
-Min.acceptForm.price=Minimum price 1.
+NotNull.acceptForm.price=Precio minimo 1.
+Min.acceptForm.price=Precio minimo 1.
 
 
 #requestForm
