--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -131,6 +131,11 @@ WaitForConfirmation = Wait for the trucker to confirm your offer. You can always
 WaitForItE = Wait for it!
 GetInTouch = Once the trucker confirms your offer you can get in touch with him and wait for your cargo
 
+HowTruckrWorks= How does Truckr work?
+ForTrucker=For Truckers
+ForProvider=For Providers
+
+
 
 #common
 Name=Name
@@ -255,6 +260,7 @@ FiltersSortArrivalDateDesc=Arrival Date (Desc)
 404ProposalMsg=Proposal not found
 TryAgain=If you think this is an error, please contact support.
 GoBack=Go Back
+Continue=Continuar
 500Error=Error 500
 500ErrorCode=Internal Server Error
 403ErrorCode=Forbidden.
@@ -264,7 +270,7 @@ PageNotFound=Page not found
 #Success
 TripCreated=Trip created successfully!
 Trips.AcceptProposal=Accept
-RequestCreated=Request created succesfully!
+RequestCreated=Publication created succesfully!
 ReserveSuccess=Offer sent succesfully!
 Description=Description
 
@@ -380,7 +386,7 @@ NoReviewsYet=No reviews yet
 verifyAccount=Verify Account
 AccountVerifiedSuccessfully=Account verified successfully
 uploadTrip=Upload Trip Picture
-
+UploadCargo=Upload Cargo Picture
 
 TripCompleted=Trip Completed
 TripCompletedDetails=The trip has been completed successfully.Thank you for chosing Truckr!
