--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -189,6 +189,10 @@ WaitForConfirmation = Espera que el camionero te confirme la oferta. Siempre pod
 WaitForItE = Espera el cargamento!
 GetInTouch = Una vez que se confirme la orden, podes comunicarte con el camionero y coordinar el envio
 
+HowTruckrWorks=Como funciona Truckr?
+ForTrucker=Para Camioneros
+ForProvider=Para Proveedores
+
 
 #common
 Name=Nombre
@@ -261,6 +265,7 @@ FiltersSortArrivalDateDesc=Fecha de llegada (Desc)
 404ProposalMsg=Oferta no encontrada
 TryAgain=Su usted cree que esto es un error contacte soporte.
 GoBack=Volver atrás
+Continue=Continuar
 500Error=Error 500
 500ErrorCode=Error interno del servidor
 403ErrorCode=Acceso denegado.
@@ -270,7 +275,7 @@ PageNotFound=Pagina no encontrada
 #Success
 TripCreated=Viaje creado con éxito
 Trips.AcceptProposal=Aceptar Oferta
-RequestCreated=Pedido creado con éxito
+RequestCreated=Publicacion creado con éxito
 ReserveSuccess=Oferta enviada con éxito
 Description=Descripcion
 
@@ -378,6 +383,7 @@ NoReviewsYet=Todavia no hay reseñas
 verifyAccount=Verificar Cuenta
 AccountVerifiedSuccessfully=Cuenta verificada con éxito
 uploadTrip=Subir Foto de Viaje
+UploadCargo=Subir Foto de la carga
 
 TripCompleted=¡Tu viaje ha sido completado con éxito!
 TripCompletedDetails=¡Gracias por usar Truckr! Esperamos que hayas tenido una buena experiencia.
