style: minor style and wording fixes

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -14,6 +14,11 @@ NotNull.userForm.role=Select a role.
 Pattern.verifyAccountForm.token=Incorrect token.
 IncorrectToken=Incorrect token.
 
+#Alerts
+AlertDateValidation.alertForm=Departure date cannot be after arrival date.
+PreventPast.alertForm.toDate=Date must be in the future.
+PreventPast.alertForm.fromDate=Date must be in the future.
+
 Max.filterForm.minAvailableVolume=Volume exceded.
 
 
@@ -385,7 +390,7 @@ NoReviewsYet=No reviews yet
 
 verifyAccount=Verify Account
 AccountVerifiedSuccessfully=Account verified successfully
-uploadTrip=Upload Trip Picture
+uploadTrip=Upload Truck Picture
 UploadCargo=Upload Cargo Picture
 
 TripCompleted=Trip Completed
