--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -14,6 +14,11 @@ Size.userForm.password=La contraseña debe tener entre 6 y 100 caracteres.
 Pattern.verifyAccountForm.token=Token incorrecto.
 IncorrectToken=Token incorrecto.
 
+#Alerts
+AlertDateValidation.alertForm=La fecha inicial tiene que ser previa a la final.
+PreventPast.alertForm.toDate=La fecha debe ser en el futuro.
+PreventPast.alertForm.fromDate=La fecha debe ser en el futuro.
+
 #SendOffer
 NotNull.acceptForm.price=Precio minimo 1.
 Min.acceptForm.price=Precio minimo 1.
@@ -379,7 +384,7 @@ NoReviewsYet=Todavia no hay reseñas
 
 verifyAccount=Verificar Cuenta
 AccountVerifiedSuccessfully=Cuenta verificada con éxito
-uploadTrip=Subir Foto de Viaje
+uploadTrip=Subir Foto del camion
 UploadCargo=Subir Foto de la carga
 
 TripCompleted=¡Tu viaje ha sido completado con éxito!
