fix: message fixes

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -30,6 +30,7 @@ NotNull.requestForm.maxArrivalDate=Debe completar este campo.
 PreventPast.requestForm.minDepartureDate=La fecha debe ser en el futuro.
 PreventPast.requestForm.maxArrivalDate=La fecha debe ser en el futuro.
 DateValidation.requestForm=La fecha de llegada debe ser posterior a la de salida
+RequireImage.requestForm.image=Debe subir una imagen.
 
 
 #tripForm
@@ -46,6 +47,7 @@ Size.tripForm.destination=Ingrese destino.
 Pattern.tripForm.price=Precio debe ser mayor a 0.
 PreventPast.tripForm.departureDate=La fecha debe ser en el futuro.
 PreventPast.tripForm.arrivalDate=La fecha debe ser en el futuro.
+RequireImage.tripForm.image=Debe subir una imagen.
 DateValidation.tripForm=La fecha de llegada debe ser posterior a la de salida.
 NotNull.tripForm=Debe completar este campo.
 NotNull.tripForm.cargoType=Seleccione una tipo de cargamento.
