--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -37,6 +37,7 @@ NotNull.requestForm.minDepartureDate=Fill out this field.
 NotNull.requestForm.maxArrivalDate=Fill out this field.
 PreventPast.requestForm.minDepartureDate=The date should be in the future.
 PreventPast.requestForm.maxArrivalDate=The date should be in the future.
+RequireImage.requestForm.image=An image is required.
 DateValidation.requestForm=Departure date cannot be after arrival date.
 
 
@@ -55,6 +56,7 @@ Pattern.tripForm.availableWeight=Weight should be a number greater than 50kg.
 Pattern.tripForm.availableVolume=Volume should be a number greater than 1m3.
 Size.tripForm.cargoType=Select an option.
 Size.tripForm.origin=Enter origin.
+RequireImage.tripForm.image=An image is required.
 Size.tripForm.destination=Enter destination.
 
 #SearchTripForm
