--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -33,6 +33,8 @@ NotNull.requestForm.maxArrivalDate=Debe completar este campo.
 PreventPast.requestForm.minDepartureDate=La fecha debe ser en el futuro.
 PreventPast.requestForm.maxArrivalDate=La fecha debe ser en el futuro.
 DateValidation.requestForm=La fecha de llegada debe ser posterior a la de salida
+RequireImage.requestForm.image=Debe subir una imagen.
+
 
 
 #tripForm
@@ -51,6 +53,7 @@ PreventPast.tripForm.departureDate=La fecha debe ser en el futuro.
 PreventPast.tripForm.arrivalDate=La fecha debe ser en el futuro.
 DateValidation.tripForm=La fecha de llegada debe ser posterior a la de salida.
 NotNull.tripForm=Debe completar este campo.
+RequireImage.tripForm.image=Debe subir una imagen.
 NotNull.tripForm.cargoType=Seleccione una tipo de cargamento.
 
 #EditUserForm
